cmake_minimum_required (VERSION 3.0)
project(chili_framework C CXX)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_INSTALL OFF CACHE INTERNAL "Generate installation target")
add_subdirectory("glad")
add_subdirectory("glfw")
add_subdirectory("Engine")
